# Lets_Go_Interface

./: CMakeLists.txt  README.md
project/: CMakeLists.txt  main.cpp
project/Resources/: resource.qrc
project/custom_widgets/access_status_invalid_message_dialog/files/: access_status_invalid_message_dialog.cpp  access_status_invalid_message_dialog.ui
project/custom_widgets/access_status_invalid_message_dialog/headers/: access_status_invalid_message_dialog.h
project/custom_widgets/aspect_ratio_pixmap_label/files/: aspect_ratio_pixmap_label.cpp
project/custom_widgets/aspect_ratio_pixmap_label/headers/: aspect_ratio_pixmap_label.h
project/custom_widgets/button_with_meta_data_widget/files/: button_with_meta_data.cpp  button_with_meta_data.ui
project/custom_widgets/button_with_meta_data_widget/headers/: button_with_meta_data.h
project/custom_widgets/display_chat_message_widget/files/: display_chat_message.cpp  display_chat_message.ui
project/custom_widgets/display_chat_message_widget/headers/: display_chat_message.h
project/custom_widgets/display_user_picture_widget/files/: display_user_picture.cpp  display_user_picture.ui
project/custom_widgets/display_user_picture_widget/headers/: display_user_picture.h
project/custom_widgets/display_user_widget_window/files/: display_user_window.cpp  display_user_window.ui
project/custom_widgets/display_user_widget_window/files/widgets_generated_names/: widgets_generated_names.cpp  widgets_generated_names.h
project/custom_widgets/display_user_widget_window/headers/: display_user_window.h
project/custom_widgets/plain_text_edit_with_max_chars/files/: plain_text_edit_with_max_chars.cpp
project/custom_widgets/plain_text_edit_with_max_chars/headers/: plain_text_edit_with_max_chars.h
project/global_values/files/: user_downloaded_login_info.cpp
project/global_values/headers/: globals.h  user_login_info.h
project/grpc/grpc_channel/grpc_channel_files/: grpc_channel.cpp
project/grpc/grpc_channel/grpc_channel_h/: grpc_channel.h
project/primary_windows/add_event_window/files/: add_event_window.cpp  add_event_window.ui
project/primary_windows/add_event_window/headers/: add_event_window.h
project/primary_windows/cancel_event_window/files/: cancel_event_window.cpp  cancel_event_window.ui
project/primary_windows/cancel_event_window/headers/: cancel_event_window.h
project/primary_windows/errors_window/files/: errors_window.cpp  errors_window.ui
project/primary_windows/errors_window/headers/: errors_window.h
project/primary_windows/feedback_window/files/: feedback_window.cpp  feedback_window.ui
project/primary_windows/feedback_window/headers/: feedback_window.h
project/primary_windows/find_user_window/files/: find_user_window.cpp  find_user_window.ui
project/primary_windows/find_user_window/headers/: find_user_window.h
project/primary_windows/home_window/files/: homewindow.cpp  homewindow.ui
project/primary_windows/home_window/files/set_default_functions/: set_default_activities.cpp  set_default_activities.h  set_default_categories.cpp  set_default_categories.h  set_default_icons.cpp  set_default_icons.h
project/primary_windows/home_window/headers/: homewindow.h
project/primary_windows/reports_window/files/: reports_window.cpp  reports_window.ui
project/primary_windows/reports_window/headers/: reports_window.h
project/primary_windows/set_default_picture/files/: set_default_picture_window.cpp  set_default_picture_window.ui
project/primary_windows/set_default_picture/headers/: set_default_picture_window.h
project/primary_windows/set_fields_window/files/: set_fields_window.cpp  set_fields_window.ui
project/primary_windows/set_fields_window/headers/: set_fields_window.h
project/primary_windows/shutdown_servers/files/: shutdown_servers.cpp  shutdown_servers.ui
project/primary_windows/shutdown_servers/headers/: shutdown_servers.h
project/primary_windows/statistics_window/files/: statistics_window.cpp  statistics_window.ui
project/primary_windows/statistics_window/headers/: statistics_window.h
project/utility/general_utility/files/: calculate_user_age.cpp  convert_android_server_channel_to_local.cpp  extract_time_t_from_tm.cpp  generate_picture_size.cpp  get_current_timestamp.cpp  get_date_time_string_from_timestamp.cpp  initialize_tm_by_date.cpp  is_valid_location.cpp  is_valid_oid.cpp  request_image_from_file.cpp  setup_grpc_channel.cpp  trim_whitespace_functions.cpp
project/utility/general_utility/headers/: general_utility.h
project/utility/log/: log.h
project/utility/request_from_server/add_admin_event/files/: add_admin_event.cpp
project/utility/request_from_server/add_admin_event/headers/: add_admin_event.h
project/utility/request_from_server/cancel_event/files/: cancel_event.cpp
project/utility/request_from_server/cancel_event/headers/: cancel_event.h
project/utility/request_from_server/delete_single_error/files/: delete_single_error.cpp
project/utility/request_from_server/delete_single_error/headers/: delete_single_error.h
project/utility/request_from_server/dismiss_report/files/: dismiss_report.cpp
project/utility/request_from_server/dismiss_report/headers/: dismiss_report.h
project/utility/request_from_server/extract_errors/files/: extract_errors.cpp
project/utility/request_from_server/extract_errors/headers/: extract_errors.h  extract_errors_with_indexing.h
project/utility/request_from_server/get_events/files/: get_events.cpp
project/utility/request_from_server/get_events/headers/: get_events.h
project/utility/request_from_server/remove_user_picture/files/: remove_user_picture.cpp
project/utility/request_from_server/remove_user_picture/headers/: remove_user_picture.h
project/utility/request_from_server/request_server_activities_categories/files/: request_server_activities_categories.cpp
project/utility/request_from_server/request_server_activities_categories/headers/: request_server_activities_categories.h
project/utility/setup_login_info/files/: setup_login_info.cpp
project/utility/setup_login_info/headers/: setup_login_info.h
(+22 files in other folders)
